tests/samples/negative/generics/private_generic_enum_import.ax
module private_generic_enum_import;

import samplelib.generic_private;

fn main() -> i32 {
    let value: Secret<i32> = Secret.some(1);
    return match value {
        .some(x) => x,
        .none => 0,
    };
}
